<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Aplicación / General -->

    <string name="app_titulo">Smarket</string>
    <string name="app_tipo">Tipo</string>
    <string name="app_descripcion">Descripción</string>
    <string name="app_precio">Precio</string>
    <string name="app_producto">Producto</string>
    <string name="app_descripcion_foto">Foto del producto</string>
    <string name="app_descripcion_logo">Logo de Smarket</string>
    <string name="app_marca">Marca</string>
    <string name="app_sistema_operativo">Sistema operativo</string>
    <string name="app_nombre_producto">Nombre</string>
    <string name="app_tipo_smartphone">Smartphone</string>
    <string name="app_tipo_tablet">Tablet</string>
    <string name="app_pantalla">Pantalla</string>
    <string name="app_pulgadas">Pulgadas</string>
    <string name="app_ud_pantalla">\"</string>
    <string name="app_ud_monetaria">€</string>
    <string name="app_ud_monetaria_texto">euros</string>
    <string name="app_ud_segundos_texto"> segundos</string>
    <string name="app_separador_descripcion">Separador horizontal</string>

    <!-- Lista de productos (&#8230;  ==  ...) -->

    <string name="lista_no_hay_productos">No hay productos que mostrar</string>
    <string name="lista_actualizar">Actualizando</string>
    <string name="lista_cargando">Cargando&#8230;</string>

    <!-- Menú de opciones de la Lista de productos -->

    <string name="lista_menu_add">Añadir Producto</string>
    <string name="lista_menu_busqueda">Búsqueda</string>
    <string name="lista_menu_iniciar_sesion">Iniciar Sesión</string>
    <string name="lista_menu_configuracion">Configuración</string>
    <string name="lista_menu_test">Tests</string>
    <string name="lista_menu_actualizar">Actualizar</string>
    <string name="lista_menu_cerrar_sesion">Cerrar Sesión</string>

    <!-- Menú contextual de la Lista de productos -->

    <string name="lista_menu_editar">Editar Producto</string>
    <string name="lista_menu_eliminar">Eliminar Producto</string>

    <!-- Búsqueda de productos -->

    <string name="busqueda_titulo">Búsqueda de Productos</string>
    <string name="busqueda_escribir">Escribir aquí</string>
    <string name="busqueda_hasta">-</string>
    <string name="busqueda_ordenar">Ordenar por</string>
    <string name="busqueda_filtrar">Filtrar por</string>
    <string name="busqueda_avanzada">Busqueda avanzada</string>
    <string name="busqueda_aplicar">Aplicar</string>
    <string name="busqueda_solo_ofertas">Solo ofertas</string>
    <string name="ordenacion_nombre_ascendente">Nombre [A-Z]</string>
    <string name="ordenacion_nombre_descendente">Nombre [Z-A]</string>
    <string name="ordenacion_precio_ascendente">Precio más bajo</string>
    <string name="ordenacion_precio_descendente">Precio más alto</string>

    <!-- Envío de pedidos -->

    <string name="envio_titulo">Envío de Pedido</string>
    <string name="envio_pedido">Inserte un nombre para identificar su pedido:</string>
    <string name="envio_boton_enviar">Enviar pedido</string>
    <string name="envio_boton_aceptar">Vale</string>

    <!-- caracter &#8230; equivalente a puntos suspensivos '...' -->
    <string name="envio_preparar">Preparando pedido&#8230;</string>
    <string name="envio_enviar">Enviando pedido&#8230;</string>
    <string name="envio_exito">Enhorabuena</string>
    <string name="envio_error">Error, inserte un nombre para su pedido.</string>
    <string name="envio_enviado">Pedido enviado!</string>
    <string name="envio_no_enviado">Pedido NO enviado</string>
    <string name="envio_pedido_realizado">Pedido realizado con identificador: </string>
    <string name="envio_pedido_recoger">Pase por el mostrador</string>

    <!-- Información de productos -->

    <string name="info_titulo">Información de Producto</string>
    <string name="info_comprar">Comprar</string>

    <!-- Inserción / Edición de productos -->

    <string name="edicion_titulo_crear">Creación de Producto</string>
    <string name="edicion_titulo_editar">Edición de Producto</string>
    <string name="edicion_galeria">Galería</string>
    <string name="edicion_foto">Foto</string>
    <string name="edicion_crear_marca">Crear</string>
    <string name="edicion_modificar_marca">Modificar</string>
    <string name="edicion_cancelar_marca">Cancelar</string>
    <string name="edicion_eliminar_marca">Eliminar</string>
    <string name="edicion_oferta">Oferta</string>
    <string name="edicion_guardar">Guardar</string>

    <!-- Errores -->

    <string name="edicion_error_marca_erronea">El nombre de la marca debe tener entre 1 y 30 caracteres</string>
    <string name="edicion_error_precio_vacio">No se ha completado el campo del precio</string>
    <string name="edicion_error_precio_erroneo">El dato del precio debe ser superior a 0</string>
    <string name="edicion_error_nombre_vacio">No se ha completado el campo del nombre</string>
    <string name="edicion_error_nombre_errorneo">El campo del nombre debe tener entre 5 y 30 caracteres</string>
    <string name="edicion_error_tipo_vacio">No se ha selecionado un tipo</string>
    <string name="edicion_error_descripcion_vacia">No se ha completado el campo de la descripción</string>
    <string name="edicion_error_descripcion_erronea">El campo de la descripción debe tener como maximo 1000 caracteres</string>
    <string name="edicion_error_pulgadas_vacias">No se ha completado el campo de las pulgadas</string>
    <string name="edicion_error_pulgadas_erroneas">El dato de las pulgadas debe ser superior a 0</string>
    <string name="edicion_error_so_vacio">No se ha selecionado un sistema operativo</string>
    <string name="edicion_error_descuento_vacio">No se ha completado el campo de oferta</string>
    <string name="edicion_error_descuento_erroneo">El dato del precio de oferta debe ser superior a 0</string>
    <string name="edicion_error_descuento_superior_precio">El precio en descuento es mayor o igual al original</string>
    <string name="edicion_error_recortar_no_disponible">Su dispositivo no soporta la acción de recortar</string>
    <string name="edicion_error_marca_vacia">No se ha seleccionado una marca</string>
    <string name="edicion_error_eliminar_marca">No se puede eliminar una marca que tiene productos asignados</string>
    
    <!-- Inicio de sesión -->

    <string name="sesion_titulo">Inicio de sesión</string>
    <string name="sesion_peticion_password">Introduzca su contraseña</string>
    <string name="sesion_iniciar_sesion">Iniciar sesión</string>
    <string name="sesion_mensaje_iniciar">Sesión iniciada</string>
    <string name="sesion_mensaje_cerrar">Sesión cerrada</string>
    <string name="sesion_mensaje_fallo">Contraseña introducida no válida</string>

    <!-- Configuración -->

    <string name="configuracion_titulo">Configuración</string>
    <string name="configuracion_cambiar_password">Cambiar contraseña</string>
    <string name="configuracion_cancelar_password">Cancelar</string>
    <string name="configuracion_tipo_BD">Base de datos</string>
    <string name="configuracion_BD_tipo_local">Local</string>
    <string name="configuracion_BD_tipo_remota">Remota</string>
    <string name="configuracion_BD_remota">Base de datos remota</string>
    <string name="configuracion_nombre_BD">Nombre</string>
    <string name="configuracion_usuario_BD">Usuario</string>
    <string name="configuracion_password_BD">Contraseña</string>
    <string name="configuracion_direccion_BD">Dirección</string>
    <string name="configuracion_puerto_BD">Puerto</string>
    <string name="configuracion_BD_sincronizacion">Sincronización de la base de datos</string>
    <string name="configuracion_BD_sinc_manual">Manual</string>
    <string name="configuracion_BD_sinc_automatica">Automatica</string>
    <string name="configuracion_BD_sinc_intervalo">Intervalo</string>
    <string name="configuracion_BD_sinc_segundos">Segundos</string>
    <string name="configuracion_caja_registradora">Caja registradora</string>
    <string name="configuracion_correo">Correo</string>
    <string name="configuracion_guardar">Guardar configuración</string>
    <string name="configuracion_introduzca_password">Introduzca nueva contraseña</string>
    <string name="configuracion_repita_password">Repita nueva contraseña</string>
    <string name="configuracion_confirmar">Confirmar</string>
    <string name="configuracion_mensaje_password_modificar">Contraseña modificada</string>
    <string name="configuracion_mensaje_password_fallo">Las dos contraseñas no coinciden, \n\t\t\t\trepita la contraseña</string>
    <string name="configuracion_mensaje_password_long">La contraseña debe tener entre 8 y 20 caracteres, y contener al menos una minúscula, una mayúscula y un número</string>
    <string name="configuracion_mensaje_guardar">Configuración guardada</string>
    <string name="configuracion_mensaje_datos_error">Es necesario rellenar todos los datos de conexión con la Base de Datos remota</string>
    

    <!-- Pruebas -->
    <string name="pruebas_titulo">Pruebas</string>
    <string name="pruebas_seleccion">Selecciona una prueba en el menu</string>
    <string name="pruebas_insertar">Insertar producto</string>
    <string name="pruebas_borrar">Borrar producto</string>
    <string name="pruebas_editar">Editar producto</string>
    <string name="pruebas_volumen">Volumen</string>
    <string name="pruebas_deshacer_volumen">Deshacer volumen</string>
    <string name="pruebas_sobrecarga">Sobrecarga</string>

</resources>