<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Búsqueda de productos -->
    <item
        android:id="@+id/lista_menu_busqueda"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/lista_menu_busqueda"/>

    <!-- Añadir/Editar productos -->
    <item
        android:id="@+id/lista_menu_add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/lista_menu_add"/>

    <!-- Actualizacion de productos -->
    <item
        android:id="@+id/lista_menu_actualizar"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/lista_menu_actualizar"/>

    <!-- Editar configuración -->
    <item
        android:id="@+id/lista_menu_configuracion"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/lista_menu_configuracion"/>

    <!-- Actualizacion de productos -->
    <item
        android:id="@+id/lista_menu_cerrar_sesion"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/lista_menu_cerrar_sesion"/>

</menu>