<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Búsqueda de productos -->
    <item
        android:id="@+id/lista_menu_busqueda"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/lista_menu_busqueda"/>
    
    <!-- Actualizacion de productos -->
    <item
        android:id="@+id/lista_menu_actualizar"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/lista_menu_actualizar"/>
    
    <!-- Iniciar sesión -->
    <item
        android:id="@+id/lista_menu_iniciar_sesion"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/lista_menu_iniciar_sesion"/>
    
    
</menu>