<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- Tipo de producto -->

    <RadioGroup
        android:id="@+id/busqueda_tipo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_tipo" />

        <RadioButton
            android:id="@+id/busqueda_smartphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_tipo_smartphone" />

        <RadioButton
            android:id="@+id/busqueda_tablet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_tipo_tablet" />
    </RadioGroup>

    <!-- Marca -->

    <LinearLayout
        android:id="@+id/busqueda_marca_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_marca"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/busqueda_marca"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:prompt="@string/app_marca" />
        </LinearLayout>
    </LinearLayout>

    <!-- Pulgadas -->

    <LinearLayout
        android:id="@+id/busqueda_pulgadas_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_pulgadas"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/busqueda_pulgadas_desde"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busqueda_hasta"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/busqueda_pulgadas_hasta"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <!-- Precio -->

    <LinearLayout
        android:id="@+id/busqueda_precio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_precio"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/busqueda_precio_desde"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busqueda_hasta"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/busqueda_precio_hasta"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <!-- SO -->

    <LinearLayout
        android:id="@+id/busqueda_so_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_sistema_operativo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/busqueda_SO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/app_sistema_operativo" />
    </LinearLayout>

    <!-- Ordenar -->

    <LinearLayout
        android:id="@+id/busqueda_ordenar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/busqueda_ordenar"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/busqueda_ordenar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>