<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zaratech.smarket.aplicacion.EditarConfiguracion" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginTop="10sp"
            android:clickable="true"
            android:gravity="left"
            android:onClick="onClick"
            android:text="@string/configuracion_cambiar_contrasenia"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- Línea de separación -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10sp"
            android:background="@android:color/darker_gray" />

        <!-- Base de datos a utilizar -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/configuracion_tipo_BD"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/configuracion_BD_tipo_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_weight="1"
                android:text="@string/configuracion_BD_tipo_local" />

            <RadioButton
                android:id="@+id/configuracion_BD_tipo_remota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/configuracion_BD_tipo_remota" />
        </RadioGroup>

        <!-- Parámetros base de datos remota -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Línea de separación -->

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="left"
                android:text="@string/configuracion_BD_remota"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- Usuario de base de datos remota -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/configuracion_usuario_BD"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/configuracion_usuario_BD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <!-- Contrasenia de base de datos remota -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/configuracion_contrasenia_BD"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/configuracion_contrasenia_BD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <!-- Dirección de base de datos remota -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/configuracion_direccion_BD"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/configuracion_direccion_BD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <!-- Puerto de base de datos remota -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/configuracion_puerto_BD"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/configuracion_puerto_BD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>
        <!-- Línea de separación -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15sp"
            android:background="@android:color/darker_gray" />

        <!-- Parámetros de la caja registradora -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="left"
            android:text="@string/configuracion_caja_registradora"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- Correo de la caja registradora -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/configuracion_correo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/configuracion_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <!-- Botón de confirmación -->

        <Button
            android:id="@+id/configuracion_boton_guardar" style="@style/Boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/configuracion_guardar" />
    </LinearLayout>

</ScrollView>