<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zaratech.smarket.aplicacion.InfoProducto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horizontal_margin" >
		
        <!-- Tipo de producto -->

        <TextView
            android:id="@+id/info_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <!-- Nombre del producto -->

        <TextView
            android:id="@+id/info_nombre"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <!-- Imagen del producto -->

        <ImageView
            android:id="@+id/info_imagen"
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_descripcion_foto"
            android:src="@drawable/smarket"
            android:layout_marginTop="10sp" />

        <!-- Línea de separación -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15sp"
            android:background="@android:color/darker_gray" />

        <!-- Descripción del teléfono -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginTop="10sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_descripcion"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/info_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <!-- Línea de separación -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" 
            android:layout_marginTop="10sp" />

        <!-- Marca del teléfono -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginTop="10sp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_marca"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/info_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <!-- Tamaño de la pantalla -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_pantalla"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/info_pantalla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <!-- Sistema operativo -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_sistema_operativo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/info_sistema_operativo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <!-- Precio -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
				android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_precio"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- Precio sin oferta -->

            <TextView
                android:id="@+id/info_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <!-- Precio con oferta, en Rojo -->

            <TextView
                android:id="@+id/info_precio_oferta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF0000"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Botón de compra -->

        <Button
            android:id="@+id/info_boton_comprar" style="@style/Boton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_comprar"
            android:layout_marginTop="10sp" />
    </LinearLayout>

</ScrollView>